<resources>
    <string name="app_name">Monthly</string>

    <string name="string_colon">:</string>
    <string name="string_day">일</string>
    <string name="string_won">원</string>
    <string name="string_requestSign">입력하신 내용이 맞다면 아래에 서명을 해주세요.</string>
    <string name="string_resign"><u>다시서명</u></string>
    <string name="string_close">닫기</string>
    <string name="string_inputComplete">입력 완료</string>
    <string name="string_complete">완료</string>
    <string name="string_cancel">취소</string>
    <string name="string_minus">-</string>
    <string name="string_input">입력</string>
    <string name="string_add">추가</string>


    <!-- Numbers -->
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>

    <!-- InitActivity -->
    <string name="init_top">처음이신가요?</string>
    <string name="init_top2">기준일은 언제로 정할까요?</string>
    <string name="init_top3">매월 사용한도는 얼마로 할까요?</string>
    <string name="init_guide">간단한 정보를 입력해주세요.\n\n</string>
    <string name="init_guide2">기준일은 매월 기록을 시작하는 날입니다.\n정기적인 소득이 생기는 날짜로 정하는게 좋아요.\n(예 : 용돈, 월급 )</string>
    <string name="init_guide3">한도는 매월 목표로 하는 사용 금액이에요.\n먼쓸리는 이 금액을 기준으로\n일일 사용 금액을 권장해 드려요.</string>
    <string name="init_name">이름</string>
    <string name="init_name_error">* 이름을 입력해 주세요</string>
    <string name="init_limitValue">월 사용한도금액</string>
    <string name="init_limitValue_error">* 1000원 이상의 금액을 입력해 주세요</string>
    <string name="init_referenceDate">기준일</string>
    <string name="init_referenceDate_error">* 기준일을 선택해 주세요</string>
    <string name="init_referenceDateSelect">기준일 선택</string>
    <string name="init_referenceDate_month">매월</string>
    <string name="confirm">확인</string>
    <string name="dialog_initCheck_title">입력하신 정보가 맞나요?</string>

    <!-- InitFinalActivity -->
    <string name="initfinal_top">응원해요!</string>
    <string name="initfinal_guide">님의 소비를 절약할 수 있도록\n먼쓸리가 옆에서 도와드릴게요.</string>
    <string name="initfinal_youcanmodifyinsettings">방금 전 입력했던 내용은 설정에서 수정이 가능해요.</string>
    <string name="initfinal_inner_title">의 다짐</string>
    <string name="initfinal_inner_main">은(는) 매월</string>
    <string name="initfinal_inner_main2">일을 기준으로 월</string>
    <string name="initfinal_inner_main3">원 한도로 소비하도록 노력하겠습니다.</string>
    <string name="initfinal_sign">(서명)</string>

    <!-- Navi -->
    <string name="navi_body_title_mymenu">My 메뉴</string>
    <string name="navi_body_mymenu_changeLimit">사용한도 변경</string>
    <string name="navi_body_mymenu_changeReferencedate">기준일 변경</string>
    <string name="navi_body_mymenu_changeName">이름 변경</string>
    <string name="navi_body_title_inquire">문의하기</string>
    <string name="navi_body_inquire_email">이메일로 문의하기</string>

    <!-- Menu Title -->
    <string name="menu_title_setting">앱 설정</string>
    <string name="menu_title_setting_push">앱 푸시 알림 설정</string>
    <string name="menu_title_setting_security">앱 잠금 설정</string>
    <string name="menu_title_setting_password">비밀번호 설정</string>
    <string name="menu_title_setting_password_modify">비밀번호 변경</string>

    <!-- Setting Push -->
    <string name="setting_push">앱 푸시 알림 설정</string>
    <string name="setting_push_time">알림 시간 설정</string>
    <string name="string_hour">시</string>
    <string name="string_everyday">매일</string>
    <string name="main_month_used">이번 달 사용 금액</string>

    <!-- Setting Security -->
    <string name="setting_security">비밀번호 설정</string>
    <string name="setting_security_change_password">비밀번호 변경</string>
    <string name="setting_security_biometric_auth">생체인증 잠금 설정</string>
    <string name="setting_security_title">생체인증 잠금 설정</string>

    <!-- Setting Password -->
    <string name="insert_password">비밀번호 입력</string>
    <string name="insert_password_guide">설정할 비밀번호를 입력해 주세요.</string>
    <string name="modify_password_guide">새로 사용할 비밀번호를 입력해 주세요.</string>
    <string name="modify_password_guide_onemore">확인을 위해 다시 한번 입력해 주세요</string>
    <string name="modify_password_guide_error">비밀번호가 일치하지 않습니다.\n처음부터 다시 입력해 주세요.</string>

    <!-- Expenditure Statistics -->
    <string name="statistics_title">지출 통계</string>
    <string name="statistics_add_button">+ 내역 추가</string>
    <string name="statistics_total_expend">총 지출</string>
    <string name="statistics_daily_average">일 평균 사용금액</string>
    <string name="statistics_daily_recommend">일일 권장 사용금액</string>
    <string name="daily_recommend_help_body_text">일일 권장 사용금액 = (설정 한도 - 오늘까지 사용 합계) / 남은 일 수</string>

    <!-- Detail Dialog -->
    <string name="detail_dialog_title">지출 내역 추가</string>
    <string name="detail_dialog_date">일시</string>
    <string name="detail_dialog_memo">내용</string>
    <string name="detail_dialog_price">금액</string>
    <string name="detail_dialog_category">카테고리</string>
    <string name="detail_dialog_category_hint">카테고리를 선택해 주세요.</string>

</resources>