<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.monthly.viewModel.SettingPasswordViewModel" />

        <variable
            name="subTitle"
            type="String" />

        <variable
            name="subTitleGuide"
            type="String" />

        <variable
            name="passwordInput"
            type="String" />

        <variable
            name="activity"
            type="android.app.Activity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_setting_password_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@{subTitle}"
                android:textAppearance="@style/Text.Bold_20_Black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_setting_password_subtitle_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{subTitleGuide}"
                android:textAppearance="@style/Text.Regular_14_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_setting_password_subtitle" />

            <TextView
                android:id="@+id/tv_password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@{passwordInput}"
                android:textAppearance="@style/Text.Bold_16_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_setting_password_subtitle_guide" />

            <TableLayout
                android:id="@+id/tl_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="10dp"
                app:layout_constraintStart_toStartOf="parent">

                <TableRow>

                    <TextView
                        android:id="@+id/tl_1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_1"
                        android:textAppearance="@style/Text.Medium_24_Grey" />

                    <TextView
                        android:id="@+id/tl_2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_2"
                        android:textAppearance="@style/Text.Medium_24_Grey" />

                    <TextView
                        android:id="@+id/tl_3"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_3"
                        android:textAppearance="@style/Text.Medium_24_Grey" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tl_4"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_4"
                        android:textAppearance="@style/Text.Medium_24_Grey" />

                    <TextView
                        android:id="@+id/tl_5"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_5"
                        android:textAppearance="@style/Text.Medium_24_Grey" />

                    <TextView
                        android:id="@+id/tl_6"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_6"
                        android:textAppearance="@style/Text.Medium_24_Grey" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tl_7"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_7"
                        android:textAppearance="@style/Text.Medium_24_Grey" />

                    <TextView
                        android:id="@+id/tl_8"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_8"
                        android:textAppearance="@style/Text.Medium_24_Grey" />

                    <TextView
                        android:id="@+id/tl_9"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_9"
                        android:textAppearance="@style/Text.Medium_24_Grey" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tl_close"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/string_cancel"
                        android:textAppearance="@style/Text.Medium_16_Grey" />

                    <TextView
                        android:id="@+id/tl_0"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/number_0"
                        android:textAppearance="@style/Text.Medium_24_Grey" />

                    <ImageView
                        android:id="@+id/tl_back"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_backspace_24"
                        android:textAppearance="@style/Text.Medium_24_Grey" />
                </TableRow>
            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
