<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.monthly.viewModel.InitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_round_white_6"
        android:paddingHorizontal="30dp">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_initCheck_title"
            android:textAppearance="@style/Text.Bold_20_Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gl_initCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:columnCount="3"
            android:useDefaultMargins="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/init_name"
                android:textAlignment="center"
                android:textAppearance="@style/Text.Medium_14_grey" />

            <TextView
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/string_colon"
                android:textAppearance="@style/Text.Medium_14_grey" />

            <TextView
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@{String.valueOf(viewModel.inputName)}"
                android:textAppearance="@style/Text.Medium_16_Black" />

            <TextView
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/init_referenceDate"
                android:textAppearance="@style/Text.Medium_14_grey" />

            <TextView
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/string_colon"
                android:textAppearance="@style/Text.Medium_14_grey" />

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/init_referenceDate_month"
                    android:textAppearance="@style/Text.Medium_16_Black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{String.valueOf(viewModel.inputDay)}"
                    android:textAppearance="@style/Text.Medium_16_Black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_day"
                    android:textAppearance="@style/Text.Medium_16_Black" />
            </LinearLayout>

            <TextView
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/init_limitValue"
                android:textAppearance="@style/Text.Medium_14_grey" />

            <TextView
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/string_colon"
                android:textAppearance="@style/Text.Medium_14_grey" />

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.inputLimitValue)}"
                    android:textAppearance="@style/Text.Medium_16_Black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_won"
                    android:textAppearance="@style/Text.Medium_16_Black" />
            </LinearLayout>

        </GridLayout>

        <LinearLayout
            android:id="@+id/ll_requestSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_initCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_requestSign"
                android:textAppearance="@style/Text.Medium_14_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="(생략가능)"
                android:textAppearance="@style/Text.Medium_12_grey" />
        </LinearLayout>

        <com.example.monthly.ui.CanvasView
            android:id="@+id/canvas"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/view_inner_shadow"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_requestSign" />

        <LinearLayout
            android:id="@+id/ll_canvas_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/canvas"
            app:layout_constraintTop_toBottomOf="@id/canvas">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_refresh_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_resign"
                android:textAppearance="@style/Text.Medium_12_grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/canvas">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_board_white"
                android:text="@string/string_close"
                android:textAlignment="center"
                android:textAppearance="@style/Text.Bold_14_Error" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_board_white"
                android:textAlignment="center"
                android:text="@string/string_inputComplete"
                android:textAppearance="@style/Text.Bold_14_Blue" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>