<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_light">

        <TextView
            android:id="@+id/tv_daily_insert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_dialog_title"
            android:textAppearance="@style/Text.Regular_16_Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_division"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/line_mid"
            app:layout_constraintTop_toBottomOf="@id/tv_daily_insert_title"
            tools:layout_editor_absoluteX="3dp" />

        <TextView
            android:id="@+id/tv_daily_insert_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail_dialog_date"
            android:textAppearance="@style/Text.Regular_16_Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_division" />

        <TextView
            android:id="@+id/tv_daily_insert_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Text.Regular_16_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_daily_insert_date_title"
            tools:text="2022년 12월 25일" />

        <TextView
            android:id="@+id/tv_daily_insert_memo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail_dialog_memo"
            android:textAppearance="@style/Text.Regular_16_Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_daily_insert_date" />

        <EditText
            android:id="@+id/et_daily_insert_memo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/view_inner_shadow"
            android:gravity="center"
            android:hint="@string/string_input"
            android:paddingVertical="10dp"
            android:textColor="@color/font_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_daily_insert_memo_title" />

        <TextView
            android:id="@+id/tv_daily_insert_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail_dialog_price"
            android:textAppearance="@style/Text.Regular_16_Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_daily_insert_memo" />

        <EditText
            android:id="@+id/et_daily_insert_price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/view_inner_shadow"
            android:gravity="center"
            android:hint="@string/string_input"
            android:inputType="number"
            android:paddingVertical="10dp"
            android:textColor="@color/font_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_daily_insert_price_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/string_won"
            android:textAppearance="@style/Text.Bold_16_Black"
            app:layout_constraintBottom_toBottomOf="@id/et_daily_insert_price"
            app:layout_constraintStart_toEndOf="@id/et_daily_insert_price"
            app:layout_constraintTop_toTopOf="@id/et_daily_insert_price" />

        <TextView
            android:id="@+id/tv_daily_insert_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail_dialog_category"
            android:textAppearance="@style/Text.Regular_16_Black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_daily_insert_price" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/view_inner_shadow"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_daily_insert_category_title" />

        <TextView
            android:id="@+id/btn_daily_insert_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="10dp"
            android:text="@string/string_add"
            android:textAppearance="@style/Text.Bold_18_Black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_spinner" />

        <TextView
            android:id="@+id/btn_daily_insert_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:paddingHorizontal="10dp"
            android:text="@string/string_cancel"
            android:textAppearance="@style/Text.Medium_18_Black"
            app:layout_constraintBottom_toBottomOf="@id/btn_daily_insert_complete"
            app:layout_constraintEnd_toStartOf="@id/btn_daily_insert_complete"
            app:layout_constraintTop_toTopOf="@id/btn_daily_insert_complete" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>