<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.monthly.viewModel.InitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_bottom_sheet"
        android:paddingHorizontal="32dp"
        android:paddingTop="10dp"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_board_white"
            android:text="@string/string_complete"
            android:textAlignment="center"
            android:textAppearance="@style/Text.Bold_16_Blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_board_white"
            android:text="@string/string_close"
            android:textAlignment="center"
            android:textAppearance="@style/Text.Medium_16_Blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bottomsheet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_board_white"
            android:text="@string/init_referenceDateSelect"
            android:textAlignment="center"
            android:textAppearance="@style/Text.Regular_16_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <NumberPicker
            android:id="@+id/np_referenceDay"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.NumberPicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_complete" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
